# rescue_drone_9000

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  launch.sh  merge
core/: CV_ring_video_feed.py  comm.py  gemma_bridge.py
dashboard/: server.py  ui_view.py
dashboard/static/: index.html
docker/: Dockerfile  entrypoint.sh
docs/: README.md  build-and-debug-report.html
ros2_ws/src/sar_drone/: package.xml  setup.cfg  setup.py
ros2_ws/src/sar_drone/launch/: sar_launch.py
ros2_ws/src/sar_drone/sar_drone/: llm_agent.py  mission_bridge.py
scripts/: survey_grid.py
sim/params/: sar_sitl.parm
sim/worlds/: sar_world.world
test_cases/: multimodal_test.py
train_and_qat_scripts/: finetune.py  synthetic_data_generation.py
