<?xml version="1.0"?>
<package format="3">
  <name>sar_drone</name>
  <version>0.1.0</version>
  <description>Search-and-rescue drone agent: MAVROS mission bridge + LLM agent nodes</description>
  <maintainer email="gabrialalex2005@gmail.com">Gabrial</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
